<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Activity 4</string>
    <string name="app_title">Android Quiz</string>
    <string name="_0">0</string>
    <string name="_02">%s</string>
    <string name="this_is_the_question">This is the question</string>
    <string name="option_1" tools:ignore="Typos">option_1</string>
    <string name="option_2">option_2</string>
    <string name="option_3">option_3</string>
    <string name="option_4">option_4</string>
    <string name="human">Human</string>
    <string name="robot">Robot</string>
    <string name="animal">Animal</string>
    <string name="alien">Alien</string>
    <string name="what_are_you">What are you?</string>
    <string name="start">start</string>
    <string name="score">score</string>
    <string name="instruction">Answer as quickly as possible, if timer reaches 0 it\'s GAME OVER.</string>
    <string name="back_to_main">back to main</string>
</resources>